plugins {
    id 'java'
    id 'application'
}

version '1.0-SNAPSHOT'

mainClassName = 'com.archelo.coupons.Main'

//applicationDefaultJvmArgs = ["-Dlog4j.category.org.apache.http.wire=DEBUG",
//"-Dorg.apache.commons.logging.simplelog.log.httpclient.wire=debug",
//"-Dorg.apache.commons.logging.simplelog.log.org.apache.commons.httpclient=debug"]

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    //testCompile group: 'junit', name: 'junit', version: '4.12'
    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'

    //https://mvnrepository.com/artifact/com.google.code.gson/gson
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.4'

    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'

//    // https://mvnrepository.com/artifact/org.json/json
//    compile group: 'org.json', name: 'json', version: '20180130'


}
